# tdd-agent-23112025

./: .gitignore  Cargo.toml  Clippy.toml  README.md  initial-requirements.md  kata.md  rustfmt.toml  tdd.yaml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
crates/tdd-agents/: Cargo.toml
crates/tdd-agents/src/: edit_plan.rs  implementor.rs  lib.rs  refactorer.rs  support.rs  tester.rs
crates/tdd-cli/: Cargo.toml  kata.md  tdd.yaml
crates/tdd-cli/src/: doctor.rs  executor.rs  init.rs  lib.rs  main.rs  status.rs
crates/tdd-cli/tests/: doctor_tests.rs  existing_repo_tests.rs  init_tests.rs  run_loop_tests.rs  status_tests.rs
crates/tdd-core/: Cargo.toml
crates/tdd-core/src/: commit_policy.rs  config.rs  lib.rs  logging.rs  orchestrator.rs  roles.rs  step.rs
crates/tdd-exec/: Cargo.toml
crates/tdd-exec/src/: bootstrap.rs  fs.rs  lib.rs  runner.rs  vcs.rs
crates/tdd-exec/tests/: runner_vcs_tests.rs
crates/tdd-fixtures/: Cargo.toml
crates/tdd-fixtures/src/: lib.rs
crates/tdd-fixtures/tests/: placeholder.rs
crates/tdd-llm/: Cargo.toml
crates/tdd-llm/src/: client.rs  config.rs  lib.rs  mock.rs
crates/tdd-llm/src/providers/: github.rs  mod.rs  openai.rs
specs/001-tdd-agent-machine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-tdd-agent-machine/contracts/: openapi.yaml
