[package]
name = "tdd-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tdd-core = { path = "../tdd-core" }
tdd-llm = { path = "../tdd-llm" }

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
